--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -8,6 +8,7 @@
 	GC_MALLOC_CHECK) && GC_MALLOC_CHECK), to match when it's used.
 	(NEED_MEM_INSERT): New macro.
 	(mem_insert, mem_insert_fixup) [!NEED_MEM_INSERT]: Remove; unused.
+	Remove one incorrect comment and fix another.
 
 	Fix minor ralloc.c problems found by static checking.
 	See http://lists.gnu.org/archive/html/emacs-devel/2011-12/msg00720.html
