ispell.el (ispell-set-spellchecker-params): Make dicts use [:alpha:] if possible.
If Emacs flavour supports [:alpha:] regexps, use it for Casechars
and Not-Casechars. This currently means use it unless flavour is
XEmacs.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-12  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
+
+	* ispell.el (ispell-set-spellchecker-params): Post-process
+	`ispell-dictionary-alist' to use [:alpha:] if possible.
+
 2012-04-16  Chong Yidong  <cyd@gnu.org>
 
 	* image.el (imagemagick--extension-regexp): New variable.
