--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-16  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in: Remove X libs workaround for old autoconf.
+
 2012-04-12  Ken Brown  <kbrown@cornell.edu>
 
 	* configure.in: Warn that Cygwin 1.5 is unsupported.  (Bug#10398)
