--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-04-16  Glenn Morris  <rgm@gnu.org>
 
+	* progmodes/perl-mode.el (c-macro-expand):
+	Remove unnecessary autoload (it is in loaddefs.el).
+
 	* textmodes/picture.el (picture-desired-column)
 	(picture-update-desired-column): Convert comments to doc-strings.
 	(picture-substitute): Remove function.
