* lisp/play/yow.el (yow-file): Use expand-file-name rather than concat. Remove old comment.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-16  Glenn Morris  <rgm@gnu.org>
 
+	* play/yow.el (yow-file): Use expand-file-name rather than concat.
+
 	* progmodes/perl-mode.el (c-macro-expand):
 	Remove unnecessary autoload (it is in loaddefs.el).
 
