--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-16  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in (NS_HAVE_NSINTEGER): Remove unnecessary variable.
+
 	* configure.in: Remove X libs workaround for old autoconf.
 
 2012-04-12  Ken Brown  <kbrown@cornell.edu>
