--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-16  Glenn Morris  <rgm@gnu.org>
 
+	* calendar/cal-tex.el (cal-tex-end-document): Trivial clarification.
+
 	* play/cookie1.el (cookie-snarf):
 	Give an explicit error if input file cannot be read.
 
