--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -4,6 +4,13 @@
 
 2012-04-16  Glenn Morris  <rgm@gnu.org>
 
+	* textmodes/two-column.el: Move custom options to the start.
+	(frame-width): Remove compat definition.
+	(2C-associate-buffer, 2C-dissociate):
+	Use with-current-buffer rather than save-excursion.
+	(2C-dissociate): Force a mode-line update.
+	(2C-autoscroll): Use ignore-errors.
+
 	* emacs-lisp/eieio-opt.el (describe-class, describe-generic):
 	Autoload trivia.
 
