--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-17  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* configure.in (AC_CHECK_FUNCS):
+	Add getpwent, endpwent, getgrent, endgrent. (Bug#7900)
+
 2012-04-16  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in (NS_HAVE_NSINTEGER): Remove unnecessary variable.
