--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-17  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* dired.c (Fsystem_users, Fsystem_groups): New functions.  (Bug#7900)
+	(syms_of_dired): Add them.
+
 2012-04-16  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix minor alloc.c problems found by static checking.
