Add user, group name completion to dired
Note from committer:

I modified the original patch, by adding the new collection argument
at the end of the argument list rather than in the middle.

* dired-aux.el (dired-mark-read-string): Offer optional completion.
(dired-do-chxxx): Complete chown, chgrp over users, groups.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-17  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* dired-aux.el (dired-mark-read-string): Offer optional completion.
+	(dired-do-chxxx): Complete chown, chgrp over users, groups.  (Bug#7900)
+
 2012-04-17  Glenn Morris  <rgm@gnu.org>
 
 	* mouse.el (mouse-drag-track):
