--- a/etc/NEWS
+++ b/etc/NEWS
@@ -74,6 +74,8 @@ shared key for Emacs Server.
 ** In Perl mode, new option `perl-indent-parens-as-block' causes non-block
 closing brackets to be aligned with the line of the opening bracket.
 
+** FIXME something happened to ses.el, 2012-04-17.
+
 ** Obsolete packages:
 
 *** mailpost.el
