--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-17  Chong Yidong  <cyd@gnu.org>
+
+	* emacs-lisp/tabulated-list.el (tabulated-list-print): Fix typos.
+
 2012-04-16  Alan Mackenzie  <acm@muc.de>
 
 	Ensure searching for keywords is case sensitive.
