--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-17  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* dired.c (Fsystem_groups): Remove unused local.
+
 2012-04-17  Glenn Morris  <rgm@gnu.org>
 
 	* dired.c (Fsystem_users): Doc fix.
