More process-related doc and manual small edits
* doc/lispref/processes.texi (Output from Processes, Filter Functions):
Mention waiting-for-user-input-p.
(Sentinels, Query Before Exit, System Processes, Transaction Queues):
(Network Servers, Datagrams, Network Processes, Network Options)
(Network Feature Testing, Serial Ports): Copyedits.
(Network): Add encrypted network overview paragraph.
Cross-reference the Emacs-GnuTLS manual.  Use @acronym.

* lisp/net/network-stream.el (open-network-stream): Doc fix.

* src/process.c (Fset_process_inherit_coding_system_flag)
(Fset_process_query_on_exit_flag): Doc fix (mention return value).
(Fmake_network_process): Doc fix.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-18  Glenn Morris  <rgm@gnu.org>
+
+	* process.c (Fset_process_inherit_coding_system_flag)
+	(Fset_process_query_on_exit_flag): Doc fix (mention return value).
+	(Fmake_network_process): Doc fix.
+
 2012-04-17  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (string_buffer_position_lim): Limit starting position to
