--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,13 @@
+2012-04-18  Glenn Morris  <rgm@gnu.org>
+
+	* processes.texi (Output from Processes, Filter Functions):
+	Mention waiting-for-user-input-p.
+	(Sentinels, Query Before Exit, System Processes, Transaction Queues):
+	(Network Servers, Datagrams, Network Processes, Network Options)
+	(Network Feature Testing, Serial Ports): Copyedits.
+	(Network): Add encrypted network overview paragraph.
+	Cross-reference the Emacs-GnuTLS manual.  Use @acronym.
+
 2012-04-17  Chong Yidong  <cyd@gnu.org>
 
 	* help.texi (Keys in Documentation): Mention :advertised-binding.
