--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-18  Glenn Morris  <rgm@gnu.org>
+
+	* net/network-stream.el (open-network-stream): Doc fix.
+
 2012-04-17  Chong Yidong  <cyd@gnu.org>
 
 	* emacs-lisp/tabulated-list.el (tabulated-list-print): Fix typos.
