--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-18  Christopher Schmidt  <christopher@ch.ristopher.com>
+
+	* files.texi (Saving Buffers): Document `visit and `visit-save'
+	values of require-final-newline.
+
 2012-04-18  Glenn Morris  <rgm@gnu.org>
 
 	* processes.texi (Output from Processes, Filter Functions):
