More small doc and lispref edits related to processes
* doc/lispref/processes.texi (Serial Ports, Byte Packing, Bindat Spec)
(Bindat Functions): Copyedits.

* src/process.c (Fset_process_inherit_coding_system_flag)
(Fset_process_query_on_exit_flag): Doc fix (mention return value).
(Fmake_network_process, Fmake_serial_process): Doc fix.

* admin/FOR-RELEASE: Related markup.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-18  Glenn Morris  <rgm@gnu.org>
+
+	* processes.texi (Serial Ports, Byte Packing, Bindat Spec)
+	(Bindat Functions): Copyedits.
+
 2012-04-18  Christopher Schmidt  <christopher@ch.ristopher.com>
 
 	* files.texi (Saving Buffers): Document `visit and `visit-save'
